2003-06-26  Andrew Cagney  <cagney@redhat.com>

	* config/djgpp/fnchange.lst: Fix 8.3 problem with sim/ppc's
	altivec_expression.h and altivec_registers.h.

2003-06-26  Andrew Cagney  <cagney@redhat.com>

	* mips-tdep.c (gdb_print_insn_mips): Only explicitly set
	info->mach when MIPS16.  Patch suggested by Fred Fish.

2003-06-26  Andrew Cagney  <cagney@redhat.com>

	* utils.c (internal_vproblem): Print the problem to a reason
	buffer and then pass to query.  Make the msg variable more local.

2003-06-26  Andreas Jaeger  <aj@suse.de>

	* x86-64-tdep.c (x86_64_push_arguments): Always set %rax to number
	of SSE registers so that varargs functions work.  Rework handling
	of passing arguments on the stack.
	(x86_64_store_return_value): Return double and float values in SSE
	register.

2003-06-24  Michael Chastain  <mec@shout.net>

	* PROBLEMS: Document pr gdb/1091 and pr gdb/1193,
	the "constructor breakpoints ignored" bug.

2003-06-25  David Carlton  <carlton@kealia.com>

	* MAINTAINERS: Update e-mail address.

2003-06-23  Andrew Cagney  <cagney@redhat.com>

	* rs6000-tdep.c (rs6000_register_virtual_type): Add explict cases
	for 0 "int0" and 4 "int32" sized registers.
	* gdbtypes.c (builtin_type_int0): Define.
	(build_gdbtypes): Initialize builtin_type_int0.
	* gdbtypes.h (builtin_type_int0): Declare.

2003-06-23  Stephane Carrez  <stcarrez@nerim.fr>

	* m68hc11-tdep.c (m68hc11_gdbarch_init): Clear gdb_arch_char_signed
	as characters are unsigned.

2003-06-22  Daniel Jacobowitz  <drow@mvista.com>

	PR gdb/1179
	* dwarfread.c (struct_type): Skip static fields without crashing.

2003-06-22  Andrew Cagney  <cagney@redhat.com>

	GDB 6.0 branch created.
	* version.in: Bump to version 5.3.90_0000-00-00-cvs.
	* PROBLEMS: Update.  Empty.
	* README: Update.
	* NEWS: Update.

2003-06-22  Daniel Jacobowitz  <drow@mvista.com>

	* symfile.c (add_symbol_file_command): Use parse_and_eval_address.
	Suggested by Nick Hibma <n_hibma@webweaving.org>.
